src/objects/Ruffle_Draw_Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Hash__c</fullName>
        <label>Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ruffle_Draw_Won__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Raffle Draw_Won</label>
        <referenceTo>Ruffle_Draw__c</referenceTo>
        <relationshipLabel>Ruffle Draw Ticket (Ruffle Draw_Won)</relationshipLabel>
        <relationshipName>Won_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ruffle_Draw__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Raffle Draw</label>
        <referenceTo>Ruffle_Draw__c</referenceTo>
        <relationshipLabel>Ruffle Draw Ticket (Ruffle Draw)</relationshipLabel>
        <relationshipName>Ruffle_Draw_Ticket</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Id__c</fullName>
        <externalId>true</externalId>
        <label>Short Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                    <default>true</default>
                    <label>Valid</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visitor</label>
        <referenceTo>Visitor__c</referenceTo>
        <relationshipName>Ruffle_Draw_Ticket</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Winner_Number__c</fullName>
        <label>Winner Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Won_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Won Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Raffle Draw Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Service_Case_Ruffle_Draw_Ticket</fullName>
        <filterScope>Queue</filterScope>
        <label>Service Case</label>
        <queue>Service_Case</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RDT-{0000000000}</displayFormat>
        <label>Ruffle Draw Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ruffle Draw Ticket</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>